--- a/public/chat.html
+++ b/public/chat.html
@@ -10,6 +10,13 @@
 			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 			crossorigin="anonymous"
 		/>
+
+		<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+			integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
+			crossorigin="anonymous"
+		/>
 	</head>
 
 	<body>
@@ -30,20 +37,105 @@
 							required
 							autocomplete="off"
 						/>
-						<button>Send</button>
+
+						<button type="submit" class="btn btn-primary">Send</button>
 					</form>
-					<button id="send-location">Send location</button>
+					<div>
+						<button type="button" class="btn btn-primary" id="send-location">
+							Send location
+						</button>
+						<button
+							type="button"
+							class="btn btn-primary"
+							id="send-location"
+							data-toggle="modal"
+							data-target="#fileUploadModalCenter"
+						>
+							<span class="fas fa-file-upload"></span> Upload
+						</button>
+					</div>
 				</div>
 			</div>
 		</div>
 
-		<script id="message-template" type="text/html">
-			<div class="message">
+		<!-- File Modal  modal-->
+		<div
+			class="modal fade"
+			id="fileUploadModalCenter"
+			tabindex="-1"
+			role="dialog"
+			aria-labelledby="fileUploadModalCenter"
+			aria-hidden="true"
+		>
+			<div
+				id="imageModalDialg"
+				class="modal-dialog modal-dialog-centered"
+				role="document"
+			>
+				<div class="modal-content">
+					<form id="image-form">
+						<div class="modal-header">
+							<h5 class="modal-title" id="fileUploadModalCenterTitle">
+								Image Upload
+							</h5>
+							<button
+								type="button"
+								class="close"
+								data-dismiss="modal"
+								aria-label="Close"
+							>
+								<span aria-hidden="true">&times;</span>
+							</button>
+						</div>
+						<div class="modal-body">
+							<div class="form-group">
+								<label for="fileUploadInput">Select Image</label>
+								<input
+									type="file"
+									class="form-control-file"
+									id="fileUploadInput"
+									accept="image/*"
+								/>
+							</div>
+						</div>
+						<div class="modal-footer">
+							<button
+								type="button"
+								class="btn btn-secondary"
+								data-dismiss="modal"
+							>
+								Close
+							</button>
+							<button type="submit" class="btn btn-primary">
+								Send image
+							</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+
+		<script id="message-template__left" type="text/html">
+			<div class="message message__left">
 			    <p>
 			        <span class="message__name">{{username}}</span>
-			        <span class="message__meta">{{createdAt}}</span>
+			                 <span class="message__meta">{{createdAt}}</span>
+			                 <br />
+			                 <span> {{message}} </span>
 			    </p>
-			    <p>{{message}}</p>
+
+			</div>
+		</script>
+
+		<script id="message-template__right" type="text/html">
+			<div class="message message__right">
+			    <p>
+			        <span class="message__name">{{username}}</span>
+			                 <span class="message__meta">{{createdAt}}</span>
+			                 <br />
+			                 <span> {{message}} </span>
+			    </p>
+
 			</div>
 		</script>
 
@@ -54,6 +146,52 @@
 			        <span class="message__meta">{{createdAt}}</span>
 			    </p>
 			    <p><a href="{{url}}" target="_blank">My current location</a></p>
+			</div>
+		</script>
+
+		<script id="location-message-template-left" type="text/html">
+			<div class="message message__left">
+			    <p>
+			        <span class="message__name">{{username}}</span>
+			        <span class="message__meta">{{createdAt}}</span>
+			        <br>
+			        <a href="{{url}}" target="_blank">My current location</a>
+			    </p>
+
+			</div>
+		</script>
+
+		<script id="image-message-template-right" type="text/html">
+			<div class="message message__right">
+			    <p>
+			        <span class="message__name">{{username}}</span>
+			        <span class="message__meta">{{createdAt}}</span>
+			        <br>
+			        <img src="{{content}}" alt="{{name}}" height="100"/>
+			    </p>
+			</div>
+		</script>
+
+		<script id="image-message-template-left" type="text/html">
+			<div class="message message__left">
+			    <p>
+			        <span class="message__name">{{username}}</span>
+			        <span class="message__meta">{{createdAt}}</span>
+			        <br>
+			        <img src="{{content}}" alt="{{name}}" height="100"/>
+			    </p>
+			</div>
+		</script>
+
+		<script id="location-message-template-right" type="text/html">
+			<div class="message message__right">
+			    <p>
+			        <span class="message__name">{{username}}</span>
+			        <span class="message__meta">{{createdAt}}</span>
+			      <br>
+			        <a  href="{{url}}" target="_blank">My current location</a>
+			    </p>
+
 			</div>
 		</script>
 
